Added router , API fetch config using Axios , and One fetchFunction fetching Movies

--- a/app.json
+++ b/app.json
@@ -4,33 +4,40 @@
     "slug": "MotionHub",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/logo-new.png",
     "scheme": "motion-hub",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true
     },
+    "androidStatusBar": {
+      "barStyle": "light-content",
+      "backgroundColor": "#030014"
+    },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "foregroundImage": "./assets/images/logo-new.png",
+        "backgroundColor": "#030014"
+      },
+      "package": "com.prince32001.MotionHub"
+    },
+    "splash": {
+      "backgroundColor": "#030014"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/icon.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "image": "./assets/images/logo-new.png",
+          "resizeMode": "cover",
+          "backgroundColor": "#030014"
         }
       ]
     ],
